--- a/webapp/css/css.css
+++ b/webapp/css/css.css
@@ -1,3 +1,23 @@
+.message.ng-hide-add,
+.message.ng-hide-remove {
+    -webkit-transition: all linear 0.2s;
+    -moz-transition: all linear 0.2s;
+    -o-transition: all linear 0.2s;
+    transition: all linear 0.2s;
+    display: block !important;
+}
+
+.message.ng-hide-add.ng-hide-add-active,
+.message.ng-hide-remove {
+    line-height: 0;
+    opacity: 0;
+}
+
+.message.show.ng-hide-add,
+.message.ng-hide-remove.ng-hide-remove-active {
+    line-height: 1;
+    opacity: 1;
+}
 .bs-callout {
     padding: 20px;
     margin: 20px 0;
@@ -73,4 +93,8 @@
 textarea {
     overflow: hidden;
     resize: none;
+}
+
+.block {
+    display: block;
 }
